# ros_kortex_vision

./: CMakeLists.txt  package.xml
include/: vision.h
launch/: point_cloud_xyzrgb_launch.py  rgbd_launch.py
src/: vision.cpp  vision_node.cpp
