<?xml version="1.0"?>
<package format="3">
  <name>kinova_vision</name>
  <version>1.0.0</version>
  <description>Package allowing access to the Kinova vision module color and depth stream.</description>
  <license>BSD</license>
  <maintainer email="support@kinova.ca">Kinova</maintainer>
  <url type="repository">https://github.com/Kinovarobotics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gstreamer</build_depend>
  <build_depend>gstreamer-plugins-base</build_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>camera_info_manager</build_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_calibration_parsers</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
